@@ -3,6 +3,7 @@ package cn.hollis.llm.mentor.rag.splitter;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.transformer.splitter.TextSplitter;
 
@@ -13,18 +14,37 @@ import java.util.stream.Collectors;
  * Markdown文档分割器，基于标题层级进行文档分段
  * 支持保留元数据、父子分段关系等高级特性
  */
+@Slf4j
 public class MarkdownHeaderTextSplitter extends TextSplitter {
 
-    //需要分割的标题列表，按标题标记长度倒序排列
+    /**
+     * 需要切割的标题配置列表。
+     * key   = Markdown 标题标记，如 "#"、"##"、"###"
+     * value = 该标题在分段元数据中对应的键名，如 "h1"、"h2"
+     * 按标记长度降序排列，保证优先匹配更长的标记（"###" 先于 "##" 先于 "#"），防止前缀误匹配。
+     */
     private List<Map.Entry<String, String>> headersToSplitOn;
 
-    //是否按行返回结果
+    /**
+     * 是否以逐行模式返回结果。
+     * true  = 每个文本行单独作为一个分段输出；
+     * false = 将相同元数据的连续行聚合为一个分块（默认推荐）。
+     */
     private boolean returnEachLine;
 
-    //是否剥离标题行本身
+    /**
+     * 是否从分段内容中剥离标题行本身
+     * true  = 分段仅包含标题下方的正文，标题文本不写入 content；
+     * false = 标题行保留在 content 中，便于阅读或二次渲染。
+     */
     private boolean stripHeaders;
 
-    //是否启用父子分段模式
+    /**
+     * 是否启用父子分段模式。
+     * true  = 为每个非顶级标题分段在元数据中写入 parentChunkId，指向层级最近的父分段；
+     * false = 不建立父子关系，各分段相互独立。
+     * 父子模式适合需要"先粗粒度召回父块、再精细读取子块"的 RAG 检索策略。
+     */
     private boolean parentChildModel;
 
     public MarkdownHeaderTextSplitter(Map<String, String> headersToSplitOn, boolean returnEachLine, boolean stripHeaders, boolean parentChildModel) {
@@ -49,6 +69,7 @@ public class MarkdownHeaderTextSplitter extends TextSplitter {
 
         List<Document> result = new ArrayList<>();
         for (Document doc : documents) {
+            // 以原始文档的 metadata 作为 baseMetadata，传递给每个子分段
             List<DocumentWithMetadata> segments = splitWithMetadata(doc.getText(), doc.getMetadata());
             for (DocumentWithMetadata segment : segments) {
                 result.add(new Document(segment.getContent(), segment.getMetadata()));
@@ -58,32 +79,42 @@ public class MarkdownHeaderTextSplitter extends TextSplitter {
     }
 
     /**
-     * 简化版分割方法，不保留元数据
-     *
+     * 简化版文本分割，仅返回分段的文本内容，不携带元数据。
      * @param text 待分割的文本
      * @return 分割后的文本片段列表
      */
     @Override
     protected List<String> splitText(String text) {
-        // 简化版本，仅返回文本内容
         return splitWithMetadata(text, new HashMap<>()).stream()
                 .map(DocumentWithMetadata::getContent)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * 核心分割逻辑，保留元数据
+     * 核心分割逻辑：按标题层级逐行解析，生成携带结构化元数据的分段列表。
      *
-     * @param text 待分割的文本
-     * @param baseMetadata 基础元数据，会被传递到每个分段中
-     * @return 带有元数据的文档片段列表
+     * <p>处理流程：
+     * 1. 逐行扫描，识别代码块边界（```/~~~），代码块内跳过标题检测
+     * 2. 识别到标题行时：维护标题栈、刷新 currentMetadata、保存已累积内容
+     * 3. 识别到普通行时：追加至 currentContent；遇空行则将 currentContent 落地为一个 Line
+     * 4. 全文扫描完毕后，将剩余 currentContent 落地
+     * 5. 根据 returnEachLine 决定逐行输出或聚合分块
+     *
+     * @param text         待分割的 Markdown 文本
+     * @param baseMetadata 来自上游的基础元数据（如文件名、来源 URL），会被合并到每个分段
+     * @return 带有结构化元数据的文档分段列表
      */
     private List<DocumentWithMetadata> splitWithMetadata(String text, Map<String, Object> baseMetadata) {
         List<String> lines = Arrays.asList(text.split("\n"));
+        // linesWithMetadata：已确认的文本行及其对应元数据，待后续聚合
         List<Line> linesWithMetadata = new ArrayList<>();
+        // currentContent：当前标题段下正在积累的文本行缓冲区
         List<String> currentContent = new ArrayList<>();
+        // currentMetadata：当前行生效的元数据（随标题切换而更新）
         Map<String, Object> currentMetadata = new HashMap<>(baseMetadata);
-        List<Header> headerStack = new ArrayList<>();  // 标题栈，用于追踪当前的标题层级结构
+        // headerStack：标题层级栈，用于维护当前的祖先标题链
+        List<Header> headerStack = new ArrayList<>();
+        // initialMetadata：随标题栈同步更新的元数据快照，每次遇到新标题时写入
         Map<String, Object> initialMetadata = new HashMap<>(baseMetadata);
 
         boolean inCodeBlock = false;  // 是否在代码块中
@@ -249,7 +280,8 @@ public class MarkdownHeaderTextSplitter extends TextSplitter {
                     }
                 }
             } catch (Exception e) {
-                System.out.println("父子模式转换失败，" + e.getMessage());
+                log.error("父子模式转换失败，" + e.getMessage());
+                e.printStackTrace();
             }
         }
 
